# cookiecutter-django-app

./: cookiecutter.json
.github/: dependabot.yml
{{cookiecutter.repo_name}}/: MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.repo_name}}/tests/: settings.py  urls.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: apps.py  signals.py  urls.py
