[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.full_name }} {{ cookiecutter.email }}"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
pytest-clarity = "0.2.0a1"
pytest-cov = "2.8.1"
pytest-django = "3.9.0"
coverage = "4.5.4"
django-coverage-plugin = "1.6.0"
black = "19.10b0"
mypy = "0.782"
mypy-extensions = "0.4.3"
pylint = "^2.5"
pylint-django = "2.0.15"
pylint-plugin-utils = "0.6"
ptipython = "1.0.1"
ptpython = "3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
